Markdown renderer no longer overflows to the right of the screen.

--- a/styles/copilot.less
+++ b/styles/copilot.less
@@ -11,6 +11,7 @@
 .box {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     flex: 1;
 }
